# schedule_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  swagger.yaml
api/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  schedule1.json
api/app/: admin.py  api.py  asgi.py  settings.py  urls.py  wsgi.py
api/certs/: admin.py  schemas.py
api/media/: 16дек-главное.html
api/my_auth/: admin.py  api.py  models.py  schemas.py
api/my_auth/migrations/: 0001_initial.py  0002_alter_myuser_id_alter_myuser_login.py  0003_alter_myuser_id.py  0004_alter_myuser_options_alter_myuser_managers_and_more.py  0005_alter_myuser_username.py  0006_myuser_email.py
api/my_user/: admin.py  api.py  schemas.py
api/rustore/: admin.py  api.py  apps.py  background.py  models.py  rustore.py  schemas.py
api/rustore/migrations/: 0001_initial.py
api/schedule/: admin.py  api.py  models.py  notification.py  parsers.py  schemas.py  services.py  settings.py  urls.py  views.py
api/schedule/migrations/: 0001_initial.py  0002_alter_lesson_options_rename_name_client_client_name_and_more.py  0003_client_last_update.py  0004_client_ascii_name.py
api/schedule_api/: __init__.py  admin.py  api.py  apps.py  decorators.py  models.py  notification.py  parsers.py  schemas.py  serializers.py  services.py  urls.py  utils.py  views.py
api/schedule_api/migrations/: 0001_initial.py  0002_alter_classes_unique_together.py  0002_alter_client_client_name_alter_itemlesson_lesson.py  0002_alter_lesson_options_rename_name_client_client_name_and_more.py  (+11 more)
(+84 files in other folders)
